--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,14 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
+
 /* 
+    CSS file for Maine Drone Photography
     Created on : Feb 12, 2018, 1:16:26 PM
-    Author     : elibb
+    Author     : Eric Libby
 */
 
 
 
 html, body{
-   background: linear-gradient(0deg, black, lightgray);
+    background: linear-gradient(45deg, black, lightgray);
    background-repeat: no-repeat;
    background-attachment: fixed;
    
@@ -89,15 +86,40 @@ h1{
 }
 
 
+.iframe-class{
+    border: none;
+    box-shadow: 0px 0px 2px;
+    width: 960px;
+    height: 540px;
+    
+   
+    
+}
+
+.iframe-class-video{
+    border: none;
+    box-shadow: 0px 0px 2px;
+    width: 400px;
+    height: 225px;
+    float: left;
+    margin: 5px;
+}
+
+
 .pictures{
     max-width: 400px;
-    
+    box-shadow: 0px 0px 2px;
     margin: 5px;
     float: left;
     
     
    
 }
+
+div a {
+    color: black;
+}
+
 
 .videos{
     max-width: 400px;
